版本升级原生层

--- a/android/app/src/main/res/xml/file_paths.xml
+++ b/android/app/src/main/res/xml/file_paths.xml
@@ -11,6 +11,7 @@
 
     <!--相当于Environment.getExternalStorageDirectory()-->
     <external-path name="external" path="." />
+    <external-path name="download" path="." />
 
 
     <!--相当于Context.getExternalFilesDir(String) Context.getExternalFilesDir(null).-->
